[package]
name = "router-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features=["full"]}
anyhow = { version="1.0.64"}
web3 = { version = "0.18.0", default-features = false, features = ["http-rustls-tls"] }
ethabi = { version = "16.0.0", features = ["full-serde"]}
env_logger = "0.10.0"
hex-literal = "0.3.4"
serde = "1.0.149"
serde_json = "1.0.89"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.17"
